* login.xhtml erstellt * web.xml eingerichtet

--- a/src/main/webapp/register.xhtml
+++ b/src/main/webapp/register.xhtml
@@ -4,8 +4,8 @@
     <head>
         <title xml:lang="de">Formel 0 - Registrieren</title>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-        <link rel="stylesheet" type="text/css" href="styles/screen.css" />
-        <script src="js/jquery.js" type="text/javascript"></script>
+        <link rel="stylesheet" type="text/css" href="resources/styles/screen.css" />
+        <script src="resources/js/jquery.js" type="text/javascript"></script>
     </head>
     <body>
         <div id="container">
