--- a/src/main/webapp/table.xhtml
+++ b/src/main/webapp/table.xhtml
@@ -4,8 +4,8 @@
     <head>
         <title xml:lang="de">Formel 0 - Spielen</title>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-        <link rel="stylesheet" type="text/css" href="styles/screen.css" />
-        <script src="js/jquery.js" type="text/javascript"></script>
+        <link rel="stylesheet" type="text/css" href="resources/styles/screen.css" />
+        <script src="resources/js/jquery.js" type="text/javascript"></script>
     </head>
     <body>
         <div id="container">
@@ -71,7 +71,7 @@
                     <div id="player" class="player">
                         <h2 class="accessibility">W&uuml;rfelbereich</h2>
                         <span class="accessibility">An der Reihe ist</span><div id="currentPlayerName">Super Mario</div>
-                        <input id="dice" type="image" tabindex="4" src="img/wuerfel1.png" title="W&uuml;rfel mit einer Eins" alt="W&uuml;rfel mit einer Eins" />
+                        <input id="dice" type="image" tabindex="4" src="resources/img/wuerfel1.png" title="W&uuml;rfel mit einer Eins" alt="W&uuml;rfel mit einer Eins" />
                     </div>
                 </div>
             </div>
