--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -13,12 +13,12 @@
             <h:form id="form">
                 <h:panelGrid id="grid" columns="1">
                     <h:outputLabel value="#{msg.name}: " for="name"/>
-                    <h:inputText id="name" value="#{loginCtrl.user.name}" required="true"
+                    <h:inputText id="name" value="#{loginCtrl.player.name}" required="true"
                                  validator="#{loginCtrl.validateUsername}" label="Name">
                         <f:validateLength minimum="3" maximum="8"/>
                     </h:inputText>
                     <h:outputLabel value="#{msg.password}: " for="password"/>
-                    <h:inputText id="password" value="#{loginCtrl.user.password}"/>
+                    <h:inputText id="password" value="#{loginCtrl.player.password}"/>
                     <h:commandButton id="login" value="#{msg.login}" action="#{loginCtrl.login}" />
                     <h:outputText value="#{msg.wrongpwd}" rendered="#{loginCtrl.loginfailed}" style="color: red"/>
                 </h:panelGrid>
