--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -18,10 +18,7 @@
                 </div>
                 <div id="navigation">
                     <h2 class="accessibility">Navigation</h2>
-                    <ul title="Navigation">
-                        <li><a id="startNewGame" href="GameServlet?restart=true" tabindex="1">Neues Spiel</a></li>
-                        <li><a href="#" tabindex="2">Ausloggen</a></li>
-                    </ul>
+                    <ui:insert name="Navigation" />
                 </div>
                 <div id="main-area">
                     <ui:insert name="content"/>
