--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -18,7 +18,7 @@
                 </div>
                 <div id="navigation">
                     <h2 class="accessibility">Navigation</h2>
-                    <ui:insert name="Navigation" />
+                    <ui:insert name="navigation" />
                 </div>
                 <div id="main-area">
                     <ui:insert name="content"/>
