--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -10,6 +10,7 @@
     <ui:composition template="./template.xhtml">
 
         <ui:define name="content">
+            <div class="content">
             <h:form id="form">
                 
                 <h:panelGrid id="grid" columns="3">
@@ -35,6 +36,7 @@
                 </h:panelGrid>
                 
             </h:form>
+            </div>
         </ui:define>
 
     </ui:composition>
