table.xhtml angepasst, API erweitert

--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -27,7 +27,7 @@
                     
                     <ui:insert name="field" />
                     
-                    <ui:insert name="dice" />
+                    <ui:insert name="player" />
                 </div>
             </div>
             <div id="footer">
