--- a/src/main/webapp/register.xhtml
+++ b/src/main/webapp/register.xhtml
@@ -13,7 +13,9 @@
                 <div id="navigation">
                     <h2 class="accessibility">Navigation</h2>
                     <ul title="Navigation">
-                        <li><h:outputLink value="faces/login.xhtml"><h:outputText value="#{msg.home}" /></h:outputLink></li>
+                        <li><h:outputLink value="./faces/login.xhtml"><h:outputText value="#{msg.home}" /></h:outputLink></li>
+                        <li><h:link outcome="login" value="#{msg.home}" /></li>
+                        
                     </ul>
                 </div>
                 
