--- a/src/main/webapp/table.xhtml
+++ b/src/main/webapp/table.xhtml
@@ -11,6 +11,7 @@
                           <li><h:link outcome="login" value="#{msg.logout}" /></li>
                     </ul>
                 </div>
+     </ui:define>
     <ui:define id="info" name="info">
         <h:panelGroup layout="block" id="info" class="info">
             <h2>Spielinformationen</h2>
