--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -13,7 +13,7 @@
             <div id="navigation">
                 <h2 class="accessibility">Navigation</h2>
                 <ul title="Navigation">
-                    <li> <li><h:link outcome="register" value="#{msg.register}" /></li></li>
+                    <li><h:link outcome="register" value="#{msg.register}" /></li>
                 </ul>
             </div>
 
