--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -7,7 +7,7 @@
     <h:head>
         <title xml:lang="de">Formel 0 - Spielen</title>
         <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1" />
-        <link rel="stylesheet" type="text/css" href="resources/styles/screen.css" />
+        <h:outputStylesheet name="styles/screen.css"/>
     </h:head>
     <h:body>
         <div id="container">
