--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -8,6 +8,7 @@
         <title xml:lang="de">Formel 0 - Spielen</title>
         <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1" />
         <h:outputStylesheet name="styles/screen.css"/>
+        <ui:insert name="head"/>
     </h:head>
     <h:body>
         <div id="container">
