--- a/src/main/webapp/table.xhtml
+++ b/src/main/webapp/table.xhtml
@@ -3,8 +3,81 @@
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:ui="http://java.sun.com/jsf/facelets">
+    <ui:define name="head">
+        <h:outputScript name="js/jquery.js"/>
+        <script type="text/javascript">
+            //<![CDATA[
+
+            $(document).ready(function() {
+                #{game.init(player.name, "Super C")}
+
+                if (#{game.round} > 0) {
+                    $("#player1").appendTo(document.getElementById("#{game.getRoadName(game.player.getPositionMinusT(1))}"));
+                    $("#player2").appendTo(document.getElementById("#{game.getRoadName(game.computer.getPositionMinusT(1))}"));
+                    drawPlayer1NoOil();
+                }
+
+                return false;
+            });
+
+            function drawPlayer1NoOil() {
+                //Animation Player 1
+                $("#player1").fadeOut(700, function() {
+                    $("#player1").appendTo(document.getElementById("#{game.getRoadName(game.player.position)}"));
+                    $("#player1").fadeIn(700, drawPlayer1Oil);
+                });
+            }
+
+            function drawPlayer1Oil() {
+                if (#{game.isOilField(game.player.position)}) {
+                    //Zuruecksetzen auf den Start des Players 1
+
+                    $("#player1").fadeOut(700, function() {
+                        $("#player1").appendTo(document.getElementById("start_road"));
+                        $("#player1").fadeIn(700, drawPlayer2NoOil);
+                    });
+                } else {
+                    drawPlayer2NoOil();
+                }
+            }
+
+            function drawPlayer2NoOil() {
+
+                if (#{game.computer.score} != 0) {
+                    //Animation Player 2
+                    $("#player2").fadeOut(700, function() {
+                        $("#player2").appendTo(document.getElementById("#{game.getRoadName(game.computer.position)}"));
+                        $("#player2").fadeIn(700, drawPlayer2Oil);
+                    });
+                } else {
+                    completeAnimation;
+                }
+            }
+
+            function drawPlayer2Oil() {
+                if (#{game.isOilField(game.computer.position)}) {
+                    //Zuruecksetzen auf den Start des Players 2
+
+                    $("#player2").fadeOut(700, function() {
+                        $("#player2").appendTo(document.getElementById("start_road"));
+                        $("#player2").fadeIn(700, completeAnimation);
+                    });
+                } else {
+                    completeAnimation();
+                }
+            }
+
+            // call this function once after all animations have finished
+            function completeAnimation() {
+                var div = $(document.createElement('div'));
+                div.attr('id', 'animationDone');
+                div.addClass('hide');
+                $("body").append(div);
+            }
+            //]]>
+        </script>
+    </ui:define>
     <ui:define name="navigation">
-        #{game.init(player.name, "Super C")}
         <ul title="Navigation">
             <li><h:link outcome="table.xhtml" value="#{msg.newgame}" /></li>
             <li><h:link outcome="login.xhtml" value="#{msg.logout}" /></li>
@@ -26,22 +99,22 @@
             </table>    	
         </h:panelGroup>
     </ui:define>
-    
+
     <ui:define name="field">
         <h:panelGroup layout="block" id="field" class="field">
             <h2 class="accessibility">#{msg.track}</h2>
             <ol id="road">
                 <li id="start_road">
                     <span class="accessibility">#{msg.start}</span>
+                </li>
+                <li class="empty_road" id="road_1">
+                    <span class="accessibility">#{msg.field} 2</span>
                     <span id="player1">
                         <span class="accessibility"><em>#{msg.player} 1</em></span>
                     </span>
                     <span id="player2">
                         <span class="accessibility"><em>#{msg.player} 2</em></span>
                     </span>
-                </li>
-                <li class="empty_road" id="road_1">
-                    <span class="accessibility">#{msg.field} 2</span>
                 </li>
                 <li class="oil_road" id="road_2">
                     <span class="accessibility">#{msg.field} 3</span>
@@ -61,7 +134,7 @@
             </ol>
         </h:panelGroup>
     </ui:define>
-    
+
     <ui:define name="player">
         <h:panelGroup layout="block" id="player" class="player">
             <h2 class="accessibility">#{msg.diceArea}</h2>
