--- a/src/main/webapp/table.xhtml
+++ b/src/main/webapp/table.xhtml
@@ -10,69 +10,51 @@
 
             $(document).ready(function() {
                 #{game.init(player.name, "Super C")}
-
-                if (#{game.round} > 0) {
-                    $("#player1").appendTo(document.getElementById("#{game.getRoadName(game.player.getPositionMinusT(1))}"));
-                    $("#player2").appendTo(document.getElementById("#{game.getRoadName(game.computer.getPositionMinusT(1))}"));
-                    drawPlayer1NoOil();
-                }
-
-                return false;
             });
 
-            function drawPlayer1NoOil() {
-                //Animation Player 1
-                $("#player1").fadeOut(700, function() {
-                    $("#player1").appendTo(document.getElementById("#{game.getRoadName(game.player.position)}"));
-                    $("#player1").fadeIn(700, drawPlayer1Oil);
-                });
-            }
+            function anim(data) {
+                if (data.status == "success") {
+                    road = new Array("start_road", "road_1", "road_2", "road_3", "road_4", "road_5", "finish_road");
+                    delay = 700;
+                    p1new = $("#p1new").val();
+                    p1old = $("#p1old").val();
+                    p2new = $("#p2new").val();
+                    p2old = $("#p2old").val();
 
-            function drawPlayer1Oil() {
-                if (#{game.isOilField(game.player.position)}) {
-                    //Zuruecksetzen auf den Start des Players 1
-
-                    $("#player1").fadeOut(700, function() {
-                        $("#player1").appendTo(document.getElementById("start_road"));
-                        $("#player1").fadeIn(700, drawPlayer2NoOil);
-                    });
-                } else {
-                    drawPlayer2NoOil();
+                    if (p1new != 0) {
+                        $("#player1").fadeOut(delay, function() {
+                            $("#player1").appendTo("#" + road[p1new]);
+                            $("#player1").fadeIn(delay);
+                        });
+                    } else {
+                        $("#player1").fadeOut(delay, function() {
+                            $("#player1").appendTo("#" + road[p1old]);
+                            $("#player1").fadeIn(delay, function() {
+                                $("#player1").fadeOut(delay, function() {
+                                    $("#player1").appendTo("#" + road[p1new]);
+                                    $("#player1").fadeIn(delay);
+                                });
+                            });
+                        });
+                    }
+                                        
+                    if (p2new != 0) {
+                        $("#player2").delay(p1new != 0 ? 2 * delay : 4 * delay).fadeOut(delay, function() {
+                            $("#player2").appendTo("#" + road[p2new]);
+                            $("#player2").fadeIn(delay);
+                        });
+                    } else {
+                        $("#player2").delay(p1new != 0 ? 2 * delay : 4 * delay).fadeOut(delay, function() {
+                            $("#player2").appendTo("#" + road[p2old]);
+                            $("#player2").fadeIn(delay, function() {
+                                $("#player2").fadeOut(delay, function() {
+                                    $("#player2").appendTo("#" + road[p2new]);
+                                    $("#player2").fadeIn(delay);
+                                });
+                            });
+                        });
+                    }
                 }
-            }
-
-            function drawPlayer2NoOil() {
-
-                if (#{game.computer.score} != 0) {
-                    //Animation Player 2
-                    $("#player2").fadeOut(700, function() {
-                        $("#player2").appendTo(document.getElementById("#{game.getRoadName(game.computer.position)}"));
-                        $("#player2").fadeIn(700, drawPlayer2Oil);
-                    });
-                } else {
-                    completeAnimation;
-                }
-            }
-
-            function drawPlayer2Oil() {
-                if (#{game.isOilField(game.computer.position)}) {
-                    //Zuruecksetzen auf den Start des Players 2
-
-                    $("#player2").fadeOut(700, function() {
-                        $("#player2").appendTo(document.getElementById("start_road"));
-                        $("#player2").fadeIn(700, completeAnimation);
-                    });
-                } else {
-                    completeAnimation();
-                }
-            }
-
-            // call this function once after all animations have finished
-            function completeAnimation() {
-                var div = $(document.createElement('div'));
-                div.attr('id', 'animationDone');
-                div.addClass('hide');
-                $("body").append(div);
             }
             //]]>
         </script>
@@ -96,7 +78,11 @@
             <table summary="Diese Tabelle listet die Namen der Spieler auf">
                 <tr><th id="player1NameLabel" class="label">#{msg.player} 1</th><td id="player1Name" class="data">#{game.player.name}</td></tr>
                 <tr><th id="player2NameLabel" class="label">#{msg.player} 2</th><td id="player2Name" class="data">#{game.computer.name}</td></tr>
-            </table>    	
+            </table>    
+            <h:inputHidden id="p1new" value="#{game.player.position}"/>
+            <h:inputHidden id="p1old" value="#{game.player.getPositionMinusT(1)}"/>
+            <h:inputHidden id="p2new" value="#{game.computer.position}"/>
+            <h:inputHidden id="p2old" value="#{game.computer.getPositionMinusT(1)}"/>
         </h:panelGroup>
     </ui:define>
 
@@ -106,15 +92,15 @@
             <ol id="road">
                 <li id="start_road">
                     <span class="accessibility">#{msg.start}</span>
-                </li>
-                <li class="empty_road" id="road_1">
-                    <span class="accessibility">#{msg.field} 2</span>
                     <span id="player1">
                         <span class="accessibility"><em>#{msg.player} 1</em></span>
                     </span>
                     <span id="player2">
                         <span class="accessibility"><em>#{msg.player} 2</em></span>
                     </span>
+                </li>
+                <li class="empty_road" id="road_1">
+                    <span class="accessibility">#{msg.field} 2</span>
                 </li>
                 <li class="oil_road" id="road_2">
                     <span class="accessibility">#{msg.field} 3</span>
@@ -141,7 +127,7 @@
             <span class="accessibility">#{msg.turn}</span><div id="currentPlayerName">#{game.player.name}</div>
             <h:form id="form">
                 <h:commandButton id="dice" image="resources/img/wuerfel#{game.getDiceEyes()}.png" tabindex="4" action="#{game.rollthedice}" title="#{msg.diceDesc} #{game.getDiceEyesString()}" alt="#{msg.diceDesc} #{game.getDiceEyesString()}">
-                    <f:ajax render=":info :field :player"/>
+                    <f:ajax render=":info :player" onevent="anim"/>
                 </h:commandButton>
             </h:form>
             <h:outputText id="out" value="p1 sc:#{game.player.score}, pos: #{game.player.position}, cp sc:#{game.computer.score}, pos: #{game.computer.position}, go: #{game.gameOver}"/> 
