--- a/src/main/webapp/register.xhtml
+++ b/src/main/webapp/register.xhtml
@@ -63,12 +63,16 @@
                     <h:message id="name_messages" for="name" style="color:red"/>
 
                     <h:outputLabel value="#{msg.pwd}: " for="pwd"/>
-                    <h:inputSecret id="pwd" value="#{auth.player.pwd}">
+                    <h:inputSecret id="pwd" value="#{auth.player.pwd}" required="true" label="Password">
                         <f:validateLength minimum="2"/>
                         <f:validateRegex pattern="^[a-zA-Z0-9]+$"/>
                     </h:inputSecret>
                     <h:message id="pwd_messages" for="pwd" style="color:red"/>
-
+                    
+                    <h:selectBooleanCheckbox id="terms" value="#{auth.terms}" valueChangeListener="#{loginCtrl.displayChanged}" required="true"/>
+                    <h:outputLabel value="#{msg.terms}" for="terms"/>
+                    <h:message id="terms_message" for="terms" style="color:red"/>
+                    
                 </h:panelGrid>
 
                 <h:commandButton id="login" value="#{msg.register}" action="#{auth.register}" />
