Updated regex pattern

--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -26,7 +26,7 @@
                     <h:outputLabel value="#{msg.pwd}: " for="pwd"/>
                     <h:inputSecret id="pwd" value="#{auth.player.pwd}" required="true">
                         <f:validateLength minimum="2"/>
-                        <f:validateRegex pattern="^[a-zA-Z]+[0-9]+$"/>
+                        <f:validateRegex pattern="^.*(?=.*\d)(?=.*[a-zA-Z]).*$"/>
                     </h:inputSecret>
                     <h:message id="pwd_messages" for="pwd" style="color:red"/>
 
